# EndlessPaint

./: .gitignore  LICENSE  README.md  builder.cmd  builder.sh  meson.build
docs/: building-on-windows.md
server/: Cargo.toml
server/src/: main.rs
src/: app.cpp  app.hpp  canvas.cpp  canvas.hpp  chunk.cpp  chunk.hpp  common.hpp  input.cpp  input.hpp  main.cpp  types.cpp  types.hpp  viewport.cpp  viewport.hpp
src/gui/: gui.cpp  gui.hpp
src/states/: drawingState.cpp  drawingState.hpp  state.hpp  stateManager.cpp  stateManager.hpp
